# TheBlackPearl

./: .env.apple.example  .gitignore  FFMPEG-NOTICE.md  Makefile  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: legal-limewire-roadmap.md
infra/seeder/: README.md  ghostwire-seed-refresh.service  ghostwire-seed-refresh.timer  ghostwire-seeder.service  seed-release.sh
scripts/: build-site-download-manifest.mjs  build-updater-manifest.mjs  capture-screens.mjs  fetch-ffmpeg.sh  mac-ota.sh  make-release-torrents.mjs
server/: .env.example  .gitignore  README.md  package-lock.json  package.json
server/deploy/: .env.example  deploy.sh  ghostwire-social.service  nginx-social.conf.example  provision.sh
server/src/: auth.ts  config.ts  db.ts  hub.ts  index.ts  protocol.ts  routes.ts  ws.ts
site/: app.js  index.html  styles.css
site/base/primitives/button/: button.css
site/base/primitives/card/: card.css
site/base/primitives/icon/: icon.css
site/base/primitives/select/: select.css
site/base/site/styles/: base.css
site/downloads/: README.txt  downloads.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json  desktop.json  splashscreen.json  visualizer.json
src-tauri/examples/: ai_probe.rs  discover_probe.rs  poster_probe.rs  scrape_probe.rs  search_probe.rs  spotify_embed_probe.rs  stream_probe.rs
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  anime.rs  artwork.rs  catalog.rs  devices.rs  discover.rs  engine.rs  enrich.rs  export.rs  indexer.rs  lib.rs  metadata.rs  music.rs  organize.rs  playlist.rs  posters.rs  remote.rs  remux.rs  safety.rs  social.rs  spotify.rs  subtitles.rs  trending.rs  tvmaze.rs  update_p2p.rs
src/components/: AddSourceDialog.tsx  AddToLibrary.css  AddToLibrary.tsx  AddToPlaylistMenu.tsx  AnimeDiscoverRows.tsx  CommandPalette.css  CommandPalette.tsx  CommandPaletteHost.tsx  ContextMenu.tsx  CreateTorrentDialog.css  CreateTorrentDialog.tsx  DeviceSyncCard.tsx  DiscoverTrending.css  DiscoverTrending.tsx  DownloadTargetDialog.tsx  DownloadingCard.css  DownloadingCard.tsx  EqPanel.css  EqPanel.tsx  ErrorBoundary.tsx  FeaturedCarousel.css  FeaturedCarousel.tsx  Hero.tsx  LibraryCard.tsx  LinkDeviceCard.tsx  LoadingScreen.css  LoadingScreen.tsx  MusicPlaylistRail.css  MusicPlaylistRail.tsx  MusicVisualizer.tsx  NavigationRail.tsx  NowPlayingBar.css  NowPlayingBar.tsx  NowPlayingHero.css  NowPlayingHero.tsx  OrganizePanel.tsx  PerformancePanel.tsx  PosterArt.tsx  PosterCard.tsx  PosterRow.tsx  (+19 more)
src/contexts/: DeviceContext.tsx  SyncContext.tsx
src/ipc/: anime.ts  automation.ts  devices.ts  discover.ts  engine.ts  library.ts  libraryCache.tsx  organize.ts  player.tsx  playlists.ts  remote.ts  shares.tsx  social.ts  spotify.ts  syncReport.ts  visualizer.tsx
src/lib/: catalog.ts  format.ts  haptic.ts  icons.ts  imageCache.ts  longpress.ts  media.ts  mockLibrary.ts  perf.ts  perfSession.ts  platform.ts  relay.ts  settingsTabs.ts  snapshotCache.ts  types.ts  useInfiniteScroll.ts
src/styles/: app-background.css  app.css
src/views/: Anime.css  Anime.tsx  Automation.tsx  Books.tsx  Catalog.tsx  Digest.css  Digest.tsx  Downloads.tsx  Export.tsx  Games.css  Games.tsx  Library.css  Library.tsx  Movies.tsx  Music.css  Music.tsx  Player.tsx  Playlists.css  Playlists.tsx  Search.tsx  Settings.css  Settings.tsx  Social.css  Social.tsx  Sources.tsx  Sync.css  Sync.tsx  TvShows.tsx
